--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,9 +1,13 @@
+default: &default
+adapter: redis
+url: redis://localhost:6379/1
+
 development:
-  adapter: async
+  <<: *default
 
 test:
-  adapter: async
+  <<: *default
 
 production:
-  adapter: redis
-  url: redis://localhost:6379/1
+  <<: *default
+  url: redis://rediscloud:8gjP9W1lV7AXsIZr@redis-12853.c3.eu-west-1-2.ec2.cloud.redislabs.com:12853
